--- a/src/app/app.module.scss
+++ b/src/app/app.module.scss
@@ -1,5 +1,5 @@
-$bodyColor: #E5E5E5;
-$appColor: #F3F7FA;
+$bodyColor: #e5e5e5;
+$appColor: #f3f7fa;
 
 body {
   background-color: $bodyColor;
@@ -11,5 +11,5 @@ body {
   width: 930px;
   margin: auto;
   align-items: center;
-  background-color: #F3F7FA;
+  background-color: #f3f7fa;
 }
