--- a/src/app-body/app-body-rigth-bar/show-more-tickets-button/show-more-tickets-button.module.scss
+++ b/src/app-body/app-body-rigth-bar/show-more-tickets-button/show-more-tickets-button.module.scss
@@ -2,6 +2,7 @@ $button: #2196f3;
 $buttonText: #ffffff;
 
 .showMoreTicketButton {
+  width: 100%;
   height: 50px;
   border: none;
   border-radius: 5px;
