--- a/src/app-body/app-body-rigth-bar/ticket-item/ticket-item.module.scss
+++ b/src/app-body/app-body-rigth-bar/ticket-item/ticket-item.module.scss
@@ -44,7 +44,8 @@ $info: #4a4a4a;
 }
 
 .ticketItem__parameter:last-child {
-  margin-right: 70px;
+  margin-right: 20px;
+  min-width: 100px;
 }
 
 .ticketItem__subtitle {
