--- a/src/app-body/app-body-rigth-bar/empty-list-warning/empty-list-warning.module.scss
+++ b/src/app-body/app-body-rigth-bar/empty-list-warning/empty-list-warning.module.scss
@@ -1,5 +1,5 @@
-$emptyListWarning: #FFC107;
-$textColor: #FFFFFF;
+$emptyListWarning: #ffc107;
+$textColor: #ffffff;
 
 .emptyListWarning {
   margin-top: 30px;
